--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-  min-height: 2000px;
+  margin: 0;
+  padding: 0;
 }
 
 #project {
@@ -8,4 +9,11 @@ body {
 
 section {
   padding-top: 5rem;
+}
+
+.jumbotron {
+  padding-top: 5rem;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+  text-align: center;
 }
